[package]
name = "petal-clustering"
version = "0.2.1"
description = "A collection of clustering algorithms."
readme = "README.md"
homepage = "https://github.com/petabi/petal-clustering"
repository = "https://github.com/petabi/petal-clustering"
license = "Apache-2.0"
authors = [
    "Min Kim <msk@dolbo.net>",
    "Min Shao <min.shao1988@gmail.com>"
]
edition = "2018"
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/petal-clustering", service = "github" }

[dependencies]
ndarray = "0.13"
petal-neighbors = "0.2"
rayon = "1"
serde = { version = "1",  features = ["derive"] }

[dev-dependencies]
maplit = "1"
