[package]
name = "petal-clustering"
version = "0.2.2"
description = "A collection of clustering algorithms."
readme = "README.md"
documentation = "https://docs.rs/petal-clustering"
homepage = "https://github.com/petabi/petal-clustering"
repository = "https://github.com/petabi/petal-clustering"
license = "Apache-2.0"
keywords = ["clustering", "dbscan", "optics", "unsupervised", "machine-learning"]
categories = ["algorithms", "data-structures"]
authors = [
    "Min Kim <msk@dolbo.net>",
    "Min Shao <min.shao1988@gmail.com>"
]
edition = "2018"
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/petal-clustering", service = "github" }

[dependencies]
ndarray = "0.14"
num-traits = "0.2"
petal-neighbors = "0.5.1"
rayon = "1"
serde = { version = "1",  features = ["derive"] }

[dev-dependencies]
maplit = "1"
