[package]
name = "petal-clustering"
version = "0.6.0"
edition = "2021"
rust-version = "1.64"
description = "A collection of clustering algorithms."
readme = "README.md"
documentation = "https://docs.rs/petal-clustering"
homepage = "https://github.com/petabi/petal-clustering"
repository = "https://github.com/petabi/petal-clustering"
license = "Apache-2.0"
keywords = [
  "clustering",
  "dbscan",
  "optics",
  "unsupervised",
  "machine-learning",
]
categories = ["algorithms", "data-structures"]
authors = ["Min Kim <msk@dolbo.net>", "Min Shao <min.shao1988@gmail.com>"]
exclude = ["./github"]

[badges]
codecov = { repository = "petabi/petal-clustering", service = "github" }

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
petal-neighbors = "0.9.0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
succinct = "0.5"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
csv = "1.1.6"
maplit = "1"
ndarray-rand = "0.14.0"

[[bench]]
name = "main"
harness = false
